# pagehub-benchmarks

./: .env.example  .gitignore  Makefile  README.md  pricing.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
benchmarks/: chess-backend.yaml  eval-chess-backend.yaml  eval-chess-frontend-with-fixture.yaml  eval-chess-frontend.yaml
docs/: index.html  style.css
docs/benchmarks/: chess-backend.html  eval-chess-backend.html  eval-chess-frontend-with-fixture.html  eval-chess-frontend.html
docs/runs/: claude-code__claude-opus-4-7__effort-xhigh__2026-05-12T23-48-07Z.html  claude-code__claude-opus-4-7__effort-xhigh__2026-05-14T10-46-57Z.html  claude-code__claude-opus-4-7__effort-xhigh__2026-05-14T14-20-19Z.html
docs/theories/: eval-fixture-injection.html  index.html
pagehub_benchmarks/: __init__.py  __main__.py  config.py  theories.py
pagehub_benchmarks/grader/: __init__.py  client.py
pagehub_benchmarks/harnesses/: __init__.py  base.py  claude_code.py
prompts/: chess-backend.md  eval-chess-frontend-with-fixture.md  eval-chess-frontend.md
templates/: base.html  benchmark.html  index.html  run.html  theory.html  theory_index.html
tests/: conftest.py  fakes.py  test_build_site.py  test_claude_code.py  test_config.py  test_dry_run.py  test_fixture_fetch.py  test_grader_client.py  test_pricing.py  test_prompt_render.py  test_push.py  test_push_helpers.py  test_results.py  test_run_benchmark.py  test_runner.py  test_theories.py
theories/: eval-fixture-injection.md
tools/: __init__.py  build_site.py
(+13 files in other folders)
