[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pagehub-benchmarks"
version = "0.1.0"
description = "A benchmark runner for LLM coding harnesses"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "httpx>=0.27", "pyjwt>=2.8", "jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
pagehub-benchmarks = "pagehub_benchmarks.__main__:main"

[tool.setuptools]
packages = ["pagehub_benchmarks", "pagehub_benchmarks.harnesses", "pagehub_benchmarks.grader", "pagehub_benchmarks.runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
